# TRAIL22-SDG

./: .gitignore  .pylintrc  README.md  bdd_comparison.py  package-lock.json  package.json  pyproject.toml  python_demo.py  res.html
Notebooks/: Hammoudeh_ARIAC22_SDG.ipynb
code/: main.py  naive_zero_shot.py  training.py
code/models/: __init__.py
code/utils/: __init__.py  dataset.py
data/: Final_Additional_Data.csv  Test_data.csv  Train_data.csv  mouse.html  ulb_plan_morpho.html
docs/: README.md
html/: .gitignore  package-lock.json  package.json  vue.config.js
html/public/: index.html
html/src/: App.vue  main.js
html/src/components/: FilePreview.vue  StatsComponent.vue
indivclf/: play.py  predict.py  test.py  train.py
meeting_notes/: 2022-09-05_kickoff.md  2022-09-06_daily.md  2022-09-07_daily.md  2022-09-12_daily.md  2022-09-13_daily.md
notebooks/: ARIAC22_SDG_v2.ipynb  Fine_tuned_BERT.ipynb  Hammoudeh_ARIAC22_SDG.ipynb  pdf_to_html.py
src/: behave.ini  html.output  main.py
src/examples/: fine_tune_bert.py  load_fine_tuned_bert.py  naive_bayes.py  random_forest.py  readme.md  zero_shot.py
src/features/: environment.py  vocab.feature
src/features/steps/: steps.py
src/sdg/: __init__.py  constants.py  experiment.py  naive_zero_shot.py  pdf_classification.py  server.py  tmp.py  training.py
src/sdg/models/: __init__.py  bert.py  binary17.py  classifier.py  model_factory.py  random_forest.py  tf_idf.py  zero_shot.py
src/sdg/utils/: __init__.py  dataset.py  stats.py  tokenizers.py
src/sdg/visualisation/: __init__.py  class_balancing.py  word_cloud.py
summary/Finetuned Bert v0.0.1/: results.pkl  summary.md
summary/Finetuned Bert v0.0.2/: results.pkl  summary.md
summary/Naive bayes (TF_IDF)/: results.pkl  summary.md
summary/Random forest/: results.pkl  summary.md
summary/Tfidf_NB&RF/: NB_classifier.pk  load.py  vectorizer.pk
summary/Zero shot/: misclassifications.md  results.pkl  summary.md
summary/Zero shot with 'None class'/: results.pkl  summary.md
tests/features/: environment.py  fairness.feature  negation.feature  ner.feature  robustness.feature  temporal.feature  vocab.feature
tests/features/steps/: steps.py  utils.py
