[tool.poetry]
name = "trail22-sdg"
version = "0.1.0"
description = "TODO"
authors = [
	"Ahmad Tayseer Hammoudeh <535653@umons.ac.be>",
	"Arne Binder <arne.binder@dfki.de>",
	"Bastien Vanderplaetse <bastien.vanderplaetse@umons.ac.be>",
	"Martin Balfroid <martin.balfroid@unamur.be>",
	"Nicolas Delinte <nicolas.delinte@uclouvain.be>",
	"Philippe Thomas <philippe.thomas@dfki.de>",
	"Yannick Molinghen <yannick.molinghen@ulb.be>"
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
transformers = "^4.21.3"
sklearn = "^0.0"
wordcloud = "^1.8.2"
spacy = "^3.4.1"
behave = "^1.2.6"
pandas = "^1.4.4"
datasets = "^2.4.0"
nltk = "^3.7"
torch = "^1.12.1"
behave-html-formatter = "^0.9.10"
bs4 = "^0.0.1"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
